11/29/10 change "Add/Remove Wires" to "Connect/Disconnect Battery"
11/29/10 fix: Plate Charge bar and overload indicator should be filled with blue when battery polarity flips
11/23/10 handle "Label:" i18n using a single MessageFormat pattern
11/23/10 move constants from BatteryShapeFactory to Battery model element, improve definition of positive terminal
11/23/10 move constants from VoltmeterShapeFactory to Voltmeter model element
11/23/10 add getShapeFactory to model elements, so that view is using the same factory instance as model
11/23/10 remove redundant calls to World.getConstrainedLocation in world bounds observers
11/23/10 remove redundant location constraint code from view, this is now handled in model
11/23/10 replace ChangeListener.stateChanged with BatteryCapacitorCircuitChangeListener.circuitChanged so that uses are easily identified by IDE
11/23/10 generalize interfaces by eliminating module-specific params (type DielectricCanvas, DielectricModel)
11/23/10 replace circuit's complicated listener interface with ChangeListener; a bit wasteful, but in practice most things need to update when anything changes
11/22/10 fix Reset All for bar meters
11/22/10 use Property<T> access to simplify DielectricChargesControl
11/22/10 use BooleanPropertyCheckBox to simplify View control panel
11/22/10 add BooleanPropertyCheckBox to simplify check boxes in control panels
11/22/10 add model elements for bar meters
11/22/10 add E-field detector body location to model, constrain to world bounds in model
11/22/10 rename CLModelElementDragHandler to CLLocationDragHandler, move to view package
11/22/10 consolidate duplicate drag handler code in base class CLModelElementDragHandler
11/22/10 add voltmeter body location to model, constrain to world bounds in model
11/22/10 remove duplicate drag constraints in model & view, consolidate model, provide constraint utility in World
11/22/10 use observer pattern in setting of dielectric transparency